# AeroNavX

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
aeronavx/: __init__.py  exceptions.py
aeronavx/api/: __init__.py  server.py
aeronavx/cli/: main.py
aeronavx/core/: __init__.py  airports.py  analytics.py  distance.py  emissions.py  geodesy.py  loader.py  routing.py  search.py  timezone.py  weather.py
aeronavx/data/: airports.csv
aeronavx/models/: __init__.py  airport.py
aeronavx/utils/: __init__.py  cache.py  constants.py  logging.py  spatial_index.py  units.py  validators.py
data/: README.md
docs/: PUBLISHING.md  index.md
examples/: basic_distance.py  emissions_example.py  nearest_airports.py  routing_example.py
tests/: test_distance.py  test_geodesy.py  test_validators.py
