[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeronavx"
version = "0.3.1"
description = "Production-grade airport data and flight geometry library"
readme = "README.md"
authors = [
    { name = "Teyfik OZ", email = "teyfikoz@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["airport", "aviation", "geodesy", "geography", "distance", "routing"]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
full = [
    "pandas>=2.0",
    "scipy>=1.10",
    "rapidfuzz>=3.0",
    "timezonefinder>=6.0",
    "requests>=2.31",
]
api = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]
all = [
    "pandas>=2.0",
    "scipy>=1.10",
    "rapidfuzz>=3.0",
    "timezonefinder>=6.0",
    "requests>=2.31",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]

[project.urls]
Homepage = "https://github.com/teyfikoz/AeroNavX"
Repository = "https://github.com/teyfikoz/AeroNavX"
Documentation = "https://github.com/teyfikoz/AeroNavX/docs"
Issues = "https://github.com/teyfikoz/AeroNavX/issues"

[project.scripts]
aeronavx = "aeronavx.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aeronavx*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
aeronavx = ["py.typed", "data/*.csv", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
